Revert "Fixes #806: display overflow for awesomplete list"
This reverts commit 7bdd0eca5ff30355caa4b5804bc81f31f9a941a5.

--- a/tpl/default/css/shaarli.css
+++ b/tpl/default/css/shaarli.css
@@ -908,10 +908,6 @@ div.awesomplete > ul {
     color: black;
 }
 
-form[name="linkform"].page-form {
-    overflow: visible;
-}
-
 @media screen and (max-width: 64em) {
     .page-form-complete .form-label {
         height: inherit;
